src-ken&y/objects/Fulfillment__c.object
<CustomObject>
    <customHelpPage>HelpFulfillment</customHelpPage>
    <fields>
        <fullName>Agreement_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Line</label>
        <referenceTo>Agreement_Line__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowance_Applied__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allowance Applied</label>
        <referenceTo>Allowance_Applied__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Billing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Fulfillments (Billing UOM)</relationshipLabel>
        <relationshipName>Fulfillments_For_Billing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Date__c</fullName>
        <label>Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Fully_Invoiced_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment Fully Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Source__c</fullName>
        <label>Fulfillment Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Transaction</label>
        <referenceTo>Inventory_Transaction__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Ahead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Ahead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Bill_Date__c</fullName>
        <label>Last Bill Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Every__c</fullName>
        <formula>Pricing_UOM__r.Every__c</formula>
        <label>Pricing UOM Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Recurrence__c</fullName>
        <formula>TEXT(Pricing_UOM__r.Recurrence__c)</formula>
        <label>Pricing UOM Recurrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <infoMessage>Pricing UOM must be time based</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Fulfillment (Pricing UOM)</relationshipLabel>
        <relationshipName>Fulfillments_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Basis__c</fullName>
        <label>Rate Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Code</label>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurrence_Start_Date__c</fullName>
        <label>Recurrence Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SKID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKID</label>
        <referenceTo>SKID__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deinstall</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fulfillment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fulfillment_Quantity_cannot_be_Zero</fullName>
        <active>true</active>
        <description>Quantity cannot be Zero on the fulfillment.</description>
        <errorConditionFormula>TEXT(Sales_Order_Line__r.Status__c ) != &apos;Closed&apos; &amp;&amp; Quantity__c = 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>You can’t fulfill an order with zero quantity. Enter an order quantity, then try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_enter_reason_code_if_on_hold</fullName>
        <active>true</active>
        <errorConditionFormula>Invoice_Hold__c == true &amp;&amp; ISBLANK( Reason_Code__c )</errorConditionFormula>
        <errorMessage>You must enter a reason code if setting fulfillment on hold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_code_must_of_invoice_hold_type</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Reason_Code__c ))  &amp;&amp;  NOT(ISPICKVAL( Reason_Code__r.Type__c , &quot;Invoice Hold&quot;) )</errorConditionFormula>
        <errorMessage>Reason code must be of invoice hold type.</errorMessage>
    </validationRules>
</CustomObject>